--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="galaxy.app.stressdetector">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.FLASHLIGHT" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
@@ -18,7 +18,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.StressDetector">
-        <activity android:name=".StressQuest"></activity>
+        <activity android:name=".familyList"></activity>
+        <activity android:name=".StressQuest" />
         <activity android:name=".UsageInstruction" />
         <activity android:name=".ThankYouActivity" />
         <activity android:name=".pam" />
