--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="galaxy.app.stressdetector">
+    package="galaxy.app.destressify">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -17,7 +17,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.StressDetector">
+        android:theme="@style/Theme.Destressfiy">
+        <activity android:name=".CameraX"></activity>
+        <activity android:name=".StepActivity" />
         <activity android:name=".familyList" />
         <activity android:name=".StressQuest" />
         <activity android:name=".UsageInstruction" />
@@ -30,6 +32,7 @@
         <activity android:name=".Title">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
